# doctest-parallel

./: .gitignore  CHANGES.markdown  README.markdown  cabal.project  default.nix  doctest-parallel.cabal  doctest.cabal  hie.yaml  package.yaml  release.sh  shell.nix  stack.yaml
.github/docker/: Dockerfile  build-and-publish-docker-images.sh
.github/scripts/: all_check.py  parse_hls_log.py
.github/workflows/: ci.yml
example/: README.md  cabal.project  example.cabal  stack.yaml
example/src/: Example.hs
example/test/: README.md  doctests.hs
ghci-wrapper/src/Language/Haskell/: GhciWrapper.hs
ghci-wrapper/test/Language/Haskell/: GhciWrapperSpec.hs
nix/: nixpkgs.nix  sources.json
scripts/: build_all.sh
src/: Extract.hs  GhcUtil.hs  Interpreter.hs  Options.hs  PackageDBs.hs  Parse.hs  Property.hs  Run.hs  Runner.hs
src/Control/Monad/: Extra.hs
src/Data/List/: Extra.hs
src/Test/: DocTest.hs
src/Test/DocTest/: Helpers.hs
src/Test/DocTest/Internal/: Extract.hs  GhcUtil.hs  GhciWrapper.hs  Interpreter.hs  Location.hs  Logging.hs  Nix.hs  Options.hs  Parse.hs  Property.hs  Runner.hs  Util.hs
src/Test/DocTest/Internal/Runner/: Example.hs
test/: ExtractSpec.hs  GhciWrapperSpec.hs  InterpreterSpec.hs  LocationSpec.hs  MainSpec.hs  OptionsSpec.hs  ParseSpec.hs  ProjectsSpec.hs  PropertySpec.hs  RunSpec.hs  RunnerSpec.hs  Spec.hs  UtilSpec.hs  doctests.hs
test/Runner/: ExampleSpec.hs
test/extract/module-options/: Binders.hs  Mono.hs  NoOptions.hs  Poly.hs
test/integration/BugfixImportHierarchical/: ModuleA.hs  ModuleB.hs
test/integration/BugfixMultipleModules/: ModuleA.hs  ModuleB.hs
test/integration/BugfixOutputToStdErr/: Fib.hs
test/integration/Color/: Foo.hs
test/integration/DosLineEndings/: Fib.hs
test/integration/Failing/: Foo.hs
test/integration/FailingMultiple/: Foo.hs
test/integration/GhcArg/: Fib.hs
test/integration/It/: Foo.hs
test/integration/LocalStderrBinding/: A.hs
test/integration/ModuleIsolation/: TestA.hs  TestB.hs
test/integration/ModuleOptions/: Foo.hs  Setup.hs
test/integration/Multiline/: Multiline.hs
test/integration/NonExposedModule/: Exposed.hs  NoImplicitImport.hs
test/integration/PropertyBool/: Foo.hs
test/integration/PropertyBoolWithTypeSignature/: Foo.hs
test/integration/PropertyFailing/: Foo.hs
test/integration/PropertyImplicitlyQuantified/: Foo.hs
test/integration/PropertyQuantified/: Foo.hs
test/integration/PropertySetup/: Foo.hs
test/integration/Setup/: Foo.hs
test/integration/SetupSkipOnFailure/: Foo.hs
test/integration/SystemIoImported/: A.hs
test/integration/TemplateHaskell/: Foo.hs
test/integration/TestBlankline/: Fib.hs
test/integration/TestCombinedExample/: Fib.hs
test/integration/TestCommentLocation/: Foo.hs
test/integration/TestDocumentationForArguments/: Fib.hs
test/integration/TestFailOnMultiline/: Fib.hs
test/integration/TestImport/: ModuleA.hs  ModuleB.hs
test/integration/TestPutStr/: Fib.hs
test/integration/TestSimple/: Fib.hs
test/integration/TrailingWhitespace/: Foo.hs
test/integration/WithCInclude/: Bar.hs
test/integration/WithCInclude/include/: WithCInclude.h
test/integration/WithCbits/: Bar.hs
test/integration/bugfixMultipleModules/: ModuleA.hs
test/nix/: a.cabal  cabal.project  default.nix  release.nix  shell.nix
test/nix/nix/: nixpkgs.nix
test/nix/src/: A.hs
test/nix/test/: doctests.hs
test/projects/T85-default-language/: T85-default-language.cabal  cabal.project
test/projects/T85-default-language/src/: MyLib.hs
test/projects/T85-default-language/test/: doctests.hs
test/projects/cpp-options/: cabal.project  cpp-options.cabal
test/projects/cpp-options/src/: MyLib.hs
test/projects/cpp-options/test/: doctests.hs
