cabal-version: 1.12

name:           doctest-parallel
version:        0.1
synopsis:       Test interactive Haskell examples
description:    The doctest program checks examples in source code comments.  It is modeled
                after doctest for Python (<https://docs.python.org/3/library/doctest.html>).
                .
                Documentation is at <https://github.com/martijnbastiaan/doctest-parallel#readme>.
category:       Testing
bug-reports:    https://github.com/martijnbastiaan/doctest-parallel/issues
homepage:       https://github.com/martijnbastiaan/doctest-parallel#readme
license:        MIT
license-file:   LICENSE
copyright:      (c) 2009-2018 Simon Hengel, 2021 Martijn Bastiaan
author:         Martijn Bastiaan <martijn@hmbastiaan.nl>
maintainer:     Martijn Bastiaan <martijn@hmbastiaan.nl>
build-type:     Simple
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.4
  , GHC == 8.10.4
  , GHC == 9.0.1
extra-source-files:
    example/example.cabal
    example/src/Example.hs
    example/test/doctests.hs
    CHANGES.markdown
    README.markdown

source-repository head
  type: git
  location: https://github.com/martijnbastiaan/doctest-parallel

library
  ghc-options: -Wall
  hs-source-dirs:
      src
      ghci-wrapper/src
  exposed-modules:
      Test.DocTest
      Test.DocTest.Helpers
  other-modules:
      Extract
      GhcUtil
      Interpreter
      Location
      Options
      Parse
      Property
      Runner
      Runner.Example
      Util
      Language.Haskell.GhciWrapper
      Paths_doctest_parallel
  build-depends:
      Cabal
    , Glob
    , base >=4.8 && <5
    , base-compat >=0.7.0
    , cabal-install-parsers
    , code-page >=0.1
    , containers
    , deepseq
    , directory
    , exceptions
    , filepath
    , ghc >=7.10 && <9.1
    , ghc-paths >=0.1.0.9
    , pretty
    , process
    , syb >=0.3
    , transformers
    , unordered-containers
  default-language: Haskell2010
