name:             a
version:          0.0.0
build-type:       Simple
cabal-version:    >= 1.8

library
  hs-source-dirs:   src
  exposed-modules:  A
  build-depends:    base, ghc

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, a, doctest-parallel >= 0.1
  default-language: Haskell2010
