cabal-version:    2.2
name:             a
version:          0.0.0
build-type:       Simple

library
  hs-source-dirs:   src
  exposed-modules:  A
  build-depends:    base, extra, ghc
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, a, doctest-parallel >= 0.1,
  default-language: Haskell2010
