cabal-version:      3.0
name:               T85-default-language
version:            0.1.0.0
license:            BSD-3-Clause
author:             Martijn Bastiaan
maintainer:         martijn@hmbastiaan.nl
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, T85-default-language, doctest-parallel >= 0.1
  default-language: Haskell2010
