cabal-version:      2.0
name:               cpp-options
version:            0.1.0.0
license:            MIT
author:             Martijn Bastiaan
maintainer:         martijn@hmbastiaan.nl
build-type:         Simple

library
    exposed-modules:  MyLib
    ghc-options:      -Wall
    cpp-options:      -DADD=add
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, cpp-options, doctest-parallel >= 0.1
  default-language: Haskell2010
